--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     {
       "name": "GitHub",
       "url": "https://github.com",
-      "description": "Code hosting platform for version control and collaboration"
+      "description": "Code hosting SaaS platform for version control and collaboration"
     },
     {
       "name": "Stack Overflow",
