Scrolling of long details text

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
       "name": "GitHub",
       "url": "https://github.com",
       "description": "Code hosting SaaS platform for version control and collaboration",
-      "details": "GitHub is a code hosting platform for version control and collaboration. It allows you to manage your code and collaborate with others."
+      "details": "GitHub is a code hosting platform for version control and collaboration. It allows you to manage your code and collaborate with others. Let us make the details text long, it is a code hosting platform for version control and collaboration. It is extreme popular and is used by many people. GitHub is a code hosting platform for version control and collaboration. It allows you to manage your code and collaborate with others. Let me repeat, it is a code hosting platform for version control and collaboration. It is extreme popular and is used by many people."
     },
     {
       "name": "Stack Overflow",
