--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "applications": [
     {
-      "name": "GitHub",
+      "name": "Campaign-Copilot",
       "url": "https://github.com",
       "description": "Code hosting SaaS platform for version control and collaboration",
       "details": "GitHub is a code hosting platform for version control and collaboration. It allows you to manage your code and collaborate with others. Let us make the details text long, it is a code hosting platform for version control and collaboration. It is extreme popular and is used by many people. GitHub is a code hosting platform for version control and collaboration. It allows you to manage your code and collaborate with others. Let me repeat, it is a code hosting platform for version control and collaboration. It is extreme popular and is used by many people."
